Layout Optimised and fixed

--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -1,1 +1,32 @@
-<p>map works!</p>
+<div class="row offset-md-1">
+  <div class="col-sm-12 col-md-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Bahadurabad</h5>
+        <p class="card-text">Parking Around the Charminar</p>
+        <a href="#" class="btn btn-primary">Check</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Dolmen mall clifton</h5>
+        <p class="card-text">Parking Outside the Mall</p>
+        <a href="#" class="btn btn-primary">Check</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Burns Road</h5>
+        <p class="card-text">Parking around the famous food street</p>
+        <a href="#" class="btn btn-primary">Check</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-12 col-md-8">
+    <div class="card">
+      <div class="card-body">
+        <div #mapContainer id="map"></div>
+      </div>
+    </div>
+  </div>
+</div>
