--- a/src/app/pages/feedback/feedback.component.html
+++ b/src/app/pages/feedback/feedback.component.html
@@ -1,1 +1,27 @@
-<p>feedback works!</p>
+<div class="row offset-md-2">
+  <div class="col-md-10 col-sm-12">
+    <div class="card">
+      <div class="card-header ">
+        <h4 class="card-title text-center">Feedback Form</h4>
+      </div>
+      <div class="card-body ">
+        <div class="form-group has-label">
+          <label>Email Address
+          </label>
+          <input class="form-control" name="email" type="text" email="true" required="true">
+        </div>
+        <div class="form-group has-label">
+          <label>Password
+          </label>
+          <input class="form-control" name="password" type="password" required="true">
+        </div>
+        <div class="card-category form-category">
+        </div>
+        <div class="card-footer text-center">
+          <button type="submit" class="btn btn-info btn-fill btn-wd">Register</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
