Google map View changes

--- a/src/app/pages/booking/booking.component.html
+++ b/src/app/pages/booking/booking.component.html
@@ -72,6 +72,7 @@
               <th scope="col" sortable="area" (sort)="onSort($event)">Date</th>
               <th scope="col" sortable="population" (sort)="onSort($event)">Start</th>
               <th scope="col" sortable="population" (sort)="onSort($event)">End</th>
+              <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
