--- a/src/app/pages/feedback/feedback.component.html
+++ b/src/app/pages/feedback/feedback.component.html
@@ -5,17 +5,14 @@
         <h4 class="card-title text-center">Feedback Form</h4>
       </div>
       <div class="card-body ">
-        <div class="form-group has-label">
-          <label>Email Address
-          </label>
-          <input class="form-control" name="email" type="text" email="true" required="true">
-        </div>
-        <div class="form-group has-label">
-          <label>Password
-          </label>
-          <input class="form-control" name="password" type="password" required="true">
-        </div>
-        <div class="card-category form-category">
+        <div class="form-group">
+          <textarea
+            class="form-control"
+            name="email"
+            type="text"
+            rows="8"
+            required="true">
+          </textarea>
         </div>
         <div class="card-footer text-center">
           <button type="submit" class="btn btn-info btn-fill btn-wd">Register</button>
@@ -23,5 +20,4 @@
       </div>
     </div>
   </div>
-
 </div>
