--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -42,7 +42,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('cancel click')">Cancel</button>
-    <button type="button" ngbAutofocus class="btn btn-danger" (click)="modal.close('Ok click')">Ok</button>
+    <button type="button" ngbAutofocus class="btn btn-success" (click)="modal.close('Ok click')">Ok</button>
   </div>
 </ng-template>
 
