Admin Dashboard layout

--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -114,7 +114,7 @@
                   <th scope="col">#</th>
                   <th scope="col" sortable="name" (sort)="onSort($event)">User</th>
                   <th scope="col" sortable="area" (sort)="onSort($event)">Feed Back</th>
-                  <th scope="col" sortable="population" (sort)="onSort($event)">reply</th>
+                  <th scope="col" sortable="population" (sort)="onSort($event)">Reply</th>
                   <th scope="col" sortable="population" (sort)="onSort($event)">Action</th>
                   <th scope="col">Action</th>
                 </tr>
