Admin Dashboard - User added

--- a/src/app/pages/booking/booking.component.html
+++ b/src/app/pages/booking/booking.component.html
@@ -22,7 +22,7 @@
 
         <div class="row">
           <div class="col-sm-3">
-            <p class="mt-5 mr-1 text-right" style="font-size: 13px;">Start Time</p>
+            <p class="mt-5 mr-1 text-sm-left text-right" style="font-size: 13px;">Start Time</p>
           </div>
           <div class="col-sm-9">
             <ngb-timepicker [(ngModel)]="model.startTime" [meridian]="'meridian'"></ngb-timepicker>
@@ -31,7 +31,7 @@
 
         <div class="row">
           <div class="col-sm-3">
-            <p class="mt-5 mr-1 text-right" style="font-size: 13px;">End Time</p>
+            <p class="mt-5 mr-1 text-sm-left text-right" style="font-size: 13px;">End Time</p>
           </div>
           <div class="col-sm-9">
             <ngb-timepicker [(ngModel)]="model.endTime" [meridian]="'meridian'"></ngb-timepicker>
