--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -11,26 +11,31 @@
                 <thead>
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col" sortable="name" (sort)="onSort($event)">Name</th>
-                  <th scope="col" sortable="area" (sort)="onSort($event)">picture</th>
+                  <th scope="col">Picture</th>
+                  <th scope="col" sortable="displayName" (sort)="onSort($event)">Name</th>
                   <th scope="col" sortable="population" (sort)="onSort($event)">email</th>
                   <th scope="col">Admin</th>
                   <th scope="col">Action</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let country of countries$ | async">
-                  <th scope="row">{{ country.id }}</th>
+                <tr *ngFor="let user of users | async; index as i">
+                  <th scope="row">{{i+1}}</th>
                   <td>
-                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
-                         style="width: 20px">
-                    <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
+                    <img [src]="user.photoURL? user.photoURL:'../../../assets/user-profile.png' " class="mr-2"
+                         style="width: 60px">
                   </td>
                   <td>
-                    <ngb-highlight [result]="country.area | number" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="user.displayName" [term]="service.searchTerm"></ngb-highlight>
                   </td>
                   <td>
-                    <ngb-highlight [result]="country.population | number" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="user.email" [term]="service.searchTerm"></ngb-highlight>
+                  </td>
+                  <td>
+                    <ngb-highlight [result]="user.admin" [term]="service.searchTerm"></ngb-highlight>
+                  </td>
+                  <td>
+                    <button class="btn btn-danger">Delete</button>
                   </td>
                 </tr>
                 </tbody>
