Admin Dashboard - Booking Service fixed

--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -12,8 +12,8 @@
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">Picture</th>
-                  <th scope="col" sortable="displayName" (sort)="onSort($event)">Name</th>
-                  <th scope="col" sortable="population" (sort)="onSort($event)">email</th>
+                  <th scope="col">Name</th>
+                  <th scope="col">email</th>
                   <th scope="col">Admin</th>
                   <th scope="col">Action</th>
                 </tr>
@@ -26,13 +26,13 @@
                          style="width: 60px">
                   </td>
                   <td>
-                    <ngb-highlight [result]="user.displayName" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="user.displayName"></ngb-highlight>
                   </td>
                   <td>
-                    <ngb-highlight [result]="user.email" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="user.email"></ngb-highlight>
                   </td>
                   <td>
-                    <ngb-highlight [result]="user.admin" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="user.admin"></ngb-highlight>
                   </td>
                   <td>
                     <button class="btn btn-danger">Delete</button>
@@ -75,18 +75,16 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let country of countries$ | async">
-                  <th scope="row">{{ country.id }}</th>
+                <tr *ngFor="let booking of bookings | async; index as i">
+                  <th scope="row">{{i + 1}}</th>
                   <td>
-                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
-                         style="width: 20px">
-                    <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="booking.name"></ngb-highlight>
                   </td>
                   <td>
-                    <ngb-highlight [result]="country.area | number" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="booking.area "></ngb-highlight>
                   </td>
                   <td>
-                    <ngb-highlight [result]="country.population | number" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="booking.number"></ngb-highlight>
                   </td>
                 </tr>
                 </tbody>
@@ -130,13 +128,13 @@
                   <td>
                     <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
                          style="width: 20px">
-                    <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="country.name"></ngb-highlight>
                   </td>
                   <td>
-                    <ngb-highlight [result]="country.area | number" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="country.area | number"></ngb-highlight>
                   </td>
                   <td>
-                    <ngb-highlight [result]="country.population | number" [term]="service.searchTerm"></ngb-highlight>
+                    <ngb-highlight [result]="country.population | number"></ngb-highlight>
                   </td>
                 </tr>
                 </tbody>
