--- a/src/app/pages/booking/booking.component.html
+++ b/src/app/pages/booking/booking.component.html
@@ -4,48 +4,88 @@
       <div class="card-header ">
         <h4 class="card-title text-center">Make Booking</h4>
       </div>
-      <div class="card-body ">
-
-        <div class="form-inline">
-          <div class="form-group">
-            <div class="input-group ml-5">
-              <label>Date</label>
-              <input class="form-control ml-5" placeholder="yyyy-mm-dd"
-                     name="dp" [(ngModel)]="model.date" ngbDatepicker [footerTemplate]="footerTemplate"
-                     #d="ngbDatepicker">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+      <div class="card-body">
+        <form #bookingForm="ngForm" (ngSubmit)="onSubmit()">
+          <div class="form-inline">
+            <div class="form-group">
+              <div class="input-group ml-5">
+                <label>Date</label>
+                <input
+                  class="form-control ml-5"
+                  placeholder="yyyy-mm-dd"
+                  name="date"
+                  [(ngModel)]="model.dateInput"
+                  ngbDatepicker
+                  [footerTemplate]="footerTemplate"
+                  #d="ngbDatepicker"
+                  #date="ngModel"
+                  required
+                  [class.is-invalid]="date.invalid && (date.touched ||bookingForm.submitted)"
+                />
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+                </div>
+                <div class="invalid-feedback" *ngIf="bookingForm.form.controls.date?.hasError('required')">
+                  Please enter date
+                </div>
+                <div class="invalid-feedback" *ngIf="bookingForm.form.controls.date?.hasError('invalidYear')">
+                  Entered date should be after today's date
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="mt-5 mr-1 text-sm-left text-right" style="font-size: 13px;">Start Time</p>
+          <div class="row">
+            <div class="col-sm-3">
+              <p class="mt-5 mr-1 text-right" style="font-size: 13px;">Start Time</p>
+            </div>
+            <div class="col-sm-9">
+              <ngb-timepicker
+                name="startTime"
+                [(ngModel)]="model.startTimeInput"
+                [meridian]="true"
+                required
+                #startTime="ngModel"
+                [class.is-invalid]="startTime.invalid && (bookingForm.submitted)"
+              ></ngb-timepicker>
+              <div class="invalid-feedback">
+                Please select start time
+              </div>
+            </div>
           </div>
-          <div class="col-sm-9">
-            <ngb-timepicker [(ngModel)]="model.startTime" [meridian]="'meridian'"></ngb-timepicker>
-          </div>
-        </div>
 
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="mt-5 mr-1 text-sm-left text-right" style="font-size: 13px;">End Time</p>
+          <div class="row">
+            <div class="col-sm-3">
+              <p class="mt-5 mr-1 text-right" style="font-size: 13px;">End Time</p>
+            </div>
+            <div class="col-sm-9">
+              <ngb-timepicker
+                name="endTime"
+                [(ngModel)]="model.endTimeInput"
+                [meridian]="true"
+                required
+                #endTime="ngModel"
+                [class.is-invalid]="endTime.invalid && (bookingForm.submitted)"
+              ></ngb-timepicker>
+              <div class="invalid-feedback" *ngIf="bookingForm.form.controls.endTime?.hasError('required')">
+                Please select end time
+              </div>
+              <div class="invalid-feedback" *ngIf="bookingForm.form.controls.endTime?.hasError('invalidEndTime')">
+                End time should be after start time
+              </div>
+            </div>
           </div>
-          <div class="col-sm-9">
-            <ngb-timepicker [(ngModel)]="model.endTime" [meridian]="'meridian'"></ngb-timepicker>
+
+          <div class="card-footer text-center">
+            <button type="submit" class="btn btn-info btn-fill btn-wd">Check</button>
           </div>
-        </div>
-        <div class="card-footer text-center">
-          <button type="submit" class="btn btn-info btn-fill btn-wd" (click)="searchSlots()">Check</button>
-        </div>
+        </form>
       </div>
     </div>
   </div>
 
   <ng-template #footerTemplate>
-    <hr class="my-0">
+    <hr class="my-0"/>
     <button class="btn btn-primary btn-sm m-2 float-left" (click)="model = today; d.close()">Today</button>
     <button class="btn btn-secondary btn-sm m-2 float-right" (click)="d.close()">Close</button>
   </ng-template>
@@ -80,8 +120,11 @@
             <tr *ngFor="let country of countries$ | async">
               <th scope="row">{{ country.id }}</th>
               <td>
-                <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
-                     style="width: 20px">
+                <img
+                  [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag"
+                  class="mr-2"
+                  style="width: 20px"
+                />
                 <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
               </td>
               <td>
@@ -95,8 +138,7 @@
           </table>
 
           <div class="d-flex justify-content-between p-2">
-            <ngb-pagination
-              [collectionSize]="total$ | async" [(page)]="service.page" [pageSize]="service.pageSize">
+            <ngb-pagination [collectionSize]="total$ | async" [(page)]="service.page" [pageSize]="service.pageSize">
             </ngb-pagination>
 
             <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
@@ -105,7 +147,6 @@
               <option [ngValue]="6">6 items per page</option>
             </select>
           </div>
-
         </form>
       </div>
     </div>
