--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -22,7 +22,8 @@
                 <tr *ngFor="let user of users | async; index as i">
                   <th scope="row">{{i+1}}</th>
                   <td>
-                    <img [src]="user.photoURL? user.photoURL:'../../../assets/user-profile.png' " class="mr-2"
+                    <img [src]="user.photoURL? user.photoURL:'../../../assets/user-profile.png' "
+                         class="mr-2"
                          style="width: 60px">
                   </td>
                   <td>
@@ -43,10 +44,12 @@
 
               <div class="d-flex justify-content-between p-2">
                 <ngb-pagination
-                  [collectionSize]="total$ | async" [(page)]="service.page" [pageSize]="service.pageSize">
+                  [collectionSize]="total$ | async" [(page)]="service.page"
+                  [pageSize]="service.pageSize">
                 </ngb-pagination>
 
-                <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
+                <select class="custom-select" style="width: auto" name="pageSize"
+                        [(ngModel)]="service.pageSize">
                   <option [ngValue]="2">2 items per page</option>
                   <option [ngValue]="4">4 items per page</option>
                   <option [ngValue]="6">6 items per page</option>
@@ -92,10 +95,12 @@
 
               <div class="d-flex justify-content-between p-2">
                 <ngb-pagination
-                  [collectionSize]="total$ | async" [(page)]="service.page" [pageSize]="service.pageSize">
+                  [collectionSize]="total$ | async" [(page)]="service.page"
+                  [pageSize]="service.pageSize">
                 </ngb-pagination>
 
-                <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
+                <select class="custom-select" style="width: auto" name="pageSize"
+                        [(ngModel)]="service.pageSize">
                   <option [ngValue]="2">2 items per page</option>
                   <option [ngValue]="4">4 items per page</option>
                   <option [ngValue]="6">6 items per page</option>
@@ -126,7 +131,8 @@
                 <tr *ngFor="let country of countries$ | async">
                   <th scope="row">{{ country.id }}</th>
                   <td>
-                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2"
+                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag"
+                         class="mr-2"
                          style="width: 20px">
                     <ngb-highlight [result]="country.name"></ngb-highlight>
                   </td>
@@ -142,10 +148,12 @@
 
               <div class="d-flex justify-content-between p-2">
                 <ngb-pagination
-                  [collectionSize]="total$ | async" [(page)]="service.page" [pageSize]="service.pageSize">
+                  [collectionSize]="total$ | async" [(page)]="service.page"
+                  [pageSize]="service.pageSize">
                 </ngb-pagination>
 
-                <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
+                <select class="custom-select" style="width: auto" name="pageSize"
+                        [(ngModel)]="service.pageSize">
                   <option [ngValue]="2">2 items per page</option>
                   <option [ngValue]="4">4 items per page</option>
                   <option [ngValue]="6">6 items per page</option>
